Change ClibanoRecipe.java to a record